try to build for browser

--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "publisher": "ultram4rine",
   "main": "./out/extension.js",
+  "browser": "./out/web/extension.js",
   "scripts": {
     "clean": "rimraf -rf coverage out *.vsix",
     "compile": "yarn run lint && yarn run clean && yarn run esbuild",
+    "compile-web": "yarn run lint && yarn run clean && yarn run esbuild-web",
     "coverage": "rimraf ./coverage && c8 yarn test",
     "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
+    "esbuild-web": "esbuild ./src/extension.ts --bundle --external:vscode --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --minify --outfile=./out/web/extension.js",
     "lint": "eslint src --ext ts",
     "prepackage": "yarn run compile",
     "package": "vsce package --yarn",
@@ -151,6 +154,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vscode/test-electron": "^2.1.5",
+    "@vscode/test-web": "^0.0.29",
     "c8": "^7.12.0",
     "esbuild": "^0.15.6",
     "eslint": "^8.23.0",
