--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "target": "ES2019",
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "DOM"],
     "outDir": "out",
     "sourceMap": true,
     "rootDir": "src",
