--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "rootDir": "src",
     "strict": true
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", ".vscode-test-web"]
 }
