compile tests with DOM lib

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "clean": "rimraf -rf coverage out *.vsix",
     "compile": "yarn run lint && yarn run clean && yarn run esbuild && yarn run esbuild-web",
-    "coverage": "rimraf ./coverage && c8 yarn test",
+    "coverage": "c8 yarn test",
     "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
     "esbuild-web": "esbuild ./src/extension.ts --bundle --external:vscode --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --minify --outfile=./out/web/extension.js",
     "open-in-browser": "vscode-test-web --extensionDevelopmentPath=. .",
@@ -37,10 +37,9 @@
     "package": "vsce package --yarn",
     "publish:ovsx": "ovsx publish -p $OVSX_PAT",
     "publish:vsce": "vsce publish --yarn -p $VSCE_PAT -i",
-    "pretest": "yarn run lint && yarn run test-compile",
+    "pretest": "yarn run lint && yarn run clean && yarn run test-compile",
     "test": "node ./out/test/runTest.js",
-    "test-compile": "yarn run clean && tsc -p ./",
-    "test-watch": "yarn run clean && tsc -watch -p ./"
+    "test-compile": "tsc --lib DOM -p ./"
   },
   "contributes": {
     "commands": [
