ignore more when package

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,6 +3,7 @@
 .idea/
 .vscode/
 .vscode-test/
+.vscode-test-web/
 coverage/
 node_modules/
 out/test/
@@ -17,6 +18,10 @@ images/demo.gif
 .codecov.yml
 .eslintrc.json
 .gitignore
+.gitpod.Dockerfile
+.gitpod.yml
 .ncurc.json
 .nycrc.json
+.yarnrc
 tsconfig.json
+yarn.lock
