--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,7 @@ on:
     paths-ignore:
       - ".devcontainer/**"
       - ".github/dependabot.yml"
+      - ".vscode/**"
       - "images/**"
       - ".gitpod.Dockerfile"
       - ".gitpod.yml"
@@ -15,6 +16,7 @@ on:
     paths-ignore:
       - ".devcontainer/**"
       - ".github/dependabot.yml"
+      - ".vscode/**"
       - "images/**"
       - ".gitpod.Dockerfile"
       - ".gitpod.yml"
