--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "target": "ES2019",
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "WebWorker"],
     "outDir": "out",
     "sourceMap": true,
     "rootDir": "src",
     "strict": true
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", ".vscode-test-web"]
 }
