--- a/package.json
+++ b/package.json
@@ -230,6 +230,9 @@
   "engines": {
     "vscode": "^1.43.0"
   },
+  "extensionDependencies": [
+    "vscode.git"
+  ],
   "icon": "images/icon.png",
   "badges": [
     {
