--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -39,10 +39,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Lint code
+        run: yarn lint
 
       - name: Run tests and make coverage
         uses: coactions/setup-xvfb@v1
