--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -42,12 +42,12 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: Run tests and make coverage
         uses: coactions/setup-xvfb@v1
         with:
-          run: yarn coverage
+          run: npm run coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -56,7 +56,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Bundle
-        run: yarn package
+        run: npm run package
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
