--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
     "esbuild-web": "esbuild ./src/extension.ts --bundle --external:vscode --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --minify --outfile=./out/web/extension.js",
     "open-in-browser": "vscode-test-web --extensionDevelopmentPath=. .",
-    "lint": "eslint src --ext ts",
+    "lint": "eslint src",
     "prepackage": "npm run compile",
     "package": "vsce package",
     "publish:ovsx": "ovsx publish -p $OVSX_PAT",
@@ -173,22 +173,23 @@
     "@octokit/rest": "^21.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.11.19",
     "@types/vscode": "^1.43.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/test-web": "^0.0.56",
     "@vscode/vsce": "^2.31.1",
     "c8": "^10.1.2",
     "esbuild": "^0.23.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.0",
     "glob": "^11.0.0",
     "mocha": "^10.3.0",
     "ovsx": "^0.9.2",
     "rimraf": "^6.0.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1"
   },
   "engines": {
     "vscode": "^1.43.0"
