--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "target": "ES2019",
-    "lib": ["ES2019", "WebWorker"],
+    "module": "Node16",
+    "target": "ES2022",
     "outDir": "out",
+    "lib": ["ES2022", "WebWorker"],
     "sourceMap": true,
     "rootDir": "src",
     "strict": true
