--- a/package.json
+++ b/package.json
@@ -23,23 +23,26 @@
     "email": "ultramarine730@gmail.com"
   },
   "publisher": "ultram4rine",
-  "main": "./out/extension.js",
-  "browser": "./out/web/extension.js",
+  "main": "./dist/extension.js",
+  "browser": "./dist/web/extension.js",
   "scripts": {
     "clean": "rimraf coverage out *.vsix",
-    "compile": "npm run lint && npm run clean && npm run esbuild && npm run esbuild-web",
     "coverage": "c8 npm test",
     "esbuild": "esbuild ./src/extension.ts --bundle --external:vscode --platform=node --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --target=es2017 --minify --outfile=./out/extension.js",
     "esbuild-web": "esbuild ./src/extension.ts --bundle --external:vscode --tsconfig=./tsconfig.json --log-level=info --color=true --format=cjs --minify --outfile=./out/web/extension.js",
     "open-in-browser": "vscode-test-web --extensionDevelopmentPath=. .",
+    "vscode:prepublish": "npm run package",
+    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run lint && npm run clean && npm run compile-tests",
+    "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "prepackage": "npm run compile",
-    "package": "vsce package",
-    "publish:ovsx": "ovsx publish -p $OVSX_PAT",
-    "publish:vsce": "vsce publish -p $VSCE_PAT -i",
-    "pretest": "npm run lint && npm run clean && npm run test-compile",
-    "test": "node ./out/test/runTest.js",
-    "test-compile": "tsc --lib DOM -p ./"
+    "test": "vscode-test"
   },
   "capabilities": {
     "virtualWorkspaces": {
@@ -178,14 +181,13 @@
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.2.0",
     "@types/vscode": "^1.43.0",
+    "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/test-web": "^0.0.56",
     "@vscode/vsce": "^2.31.1",
     "c8": "^10.1.2",
     "esbuild": "^0.23.0",
     "eslint": "^9.9.0",
-    "glob": "^11.0.0",
-    "mocha": "^10.7.3",
     "ovsx": "^0.9.2",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4",
