--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "c8": "^10.1.2",
     "esbuild": "^0.23.0",
     "eslint": "^9.9.0",
+    "ovsx": "^0.9.2",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
